[tool.poetry]
name = "blinktrade_tools"
version = "0.1.0"
description = "Blinktrade tools"
authors = ["Rodrigo Souza <r@blinktrade.com>"]
readme = "README.md"
homepage = "https://github.com/blinktrade/blinktrade_tools"
license="GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8, <3.11"
requests = "~2.27.1"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
caniusepython3 = "^7.3.0"
mypy = "^0.991"
pylint = "^2.15.5"
pytype = "^2022.11.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blinktrade_exporter = 'blinktrade_tools.exporter:main'
